--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <table cellspacing="20">
     <tr>
       <td>
-        <img src="C:\Users\fatal\Documents\Web development\HTML - PERSONAL SITE\Profile picture\cropped circle photo.png" alt="vitor's profile picture" width="180" height="180">
+        <img src="https://github.com/herotito/CV-ON-HTML/blob/main/Profile%20picture/cropped%20circle%20photo.png" alt="vitor's profile picture" width="180" height="180">
       </td>
       <td>
         <p>
