--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="https://ibb.co/C0ZLs81" alt="vitor's profile picture" width="180" height="180">
       </td>
       <td>
-         <p><em>Vitor Hugo</em></p>
+        <p><em><strong>Vitor Hugo</strong></em></p>
         <p>
           <em><strong>Developer</strong></em>
         </p>
