--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <table cellspacing="20">
     <tr>
       <td>
-        <img src="https://ibb.co/C0ZLs81" alt="vitor's profile picture" width="180" height="180">
+        <img src="https://freeimage.host/i/5JzSyu" alt="vitor's profile picture" width="180" height="180">
       </td>
       <td>
         <p><em><strong>Vitor Hugo</strong></em></p>
