--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </p>
       </td>
       <td>
-        <p><em><a href="C:\Users\fatal\Documents\Web development\HTML - PERSONAL SITE\Formpage.html">Leave me a message</a></em></p>
+        <p><em><a href="https://github.com/herotito/CV-ON-HTML/blob/main/Formpage.html">Leave me a message</a></em></p>
       </td>
     </tr>
   </table>
