--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
   <table cellspacing="20">
     <tr>
       <td>
-        <img src="https://freeimage.host/i/5JzSyu" alt="vitor's profile picture" width="180" height="180">
+        <img src="Profile picture/cropped circle photo.png" alt="vitor's profile picture" width="180" height="180">
       </td>
       <td>
+        <p>
+          <em><strong>Vitor Hugo</strong></em>
         <p>
           <em><strong>Developer</strong></em>
         </p>
@@ -42,7 +44,7 @@
         </p>
       </td>
       <td>
-        <p><em><a href="https://github.com/herotito/CV-ON-HTML/blob/main/Formpage.html">Leave me a message</a></em></p>
+        <p><em><a href="Formpage.html">Leave me a message</a></em></p>
       </td>
     </tr>
   </table>
